# ZenovateX

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  helper.txt  mkdocs.yml  pyproject.toml  requirements.txt
config/: settings.py
docs/: index.md
docs/00_home/: about.md
docs/01_notes/: notes.md  todo.md
