[tool.poetry]
name = "ZenovateX"
version = "0.1.0"
description = "My personal helper..."
authors = ["Matus Kocik <matuskocik@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matus-kocik/ZenovateX"


[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-gen-files = "^0.5.0"
markdown = "^3.7"
mkdocstrings = "0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"